ubiquity (2.13.12) UNRELEASED; urgency=low

  * While displaying question or error dialogs, only change the busy cursor
    state rather than also allowing changing step (LP: #1095684).

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 18 Feb 2013 16:22:13 +0000

ubiquity (2.13.11) raring; urgency=low

  * Remove remaining autofoo cruft from the source tree and ignore it. We
    are using dh-autoreconf.
  * If available, Use gnome-settings-daemon to set the wallpaper, instead
    of the wallpaper app. Supports changing background and screen size
    changes (e.g. like on nexus7). For derivatives that do not ship g-s-d,
    the wallpaper should be draw by their respective native means or the
    wallpaper app should be fixed or something like xloadimage could be
    used.

 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Sat, 16 Feb 2013 07:18:44 +0000

ubiquity (2.13.10) raring; urgency=low

  [ Colin Watson ]
  * Only force mirror/country to the value of debian-installer/country if it
    is empty or has not been preseeded (LP: #732221).
  * For automatic installs, set debian-installer/country to a country
    matching time/zone when starting up the timezone plugin, since its
    ok_handler will typically never be called (LP: #1098577).
  * Save a random seed to the installed system so that it has better entropy
    on first boot (LP: #1098299).
  * Update translations from Launchpad (LP: #1096923).
  * Refactor handling of automatic mode to make it easier to override checks
    for it in plugins.

  [ Iain Lane ]
  * Port the webcam support to GStreamer 1.0.

  [ Jonathan Riddell ]
  * Fix widget layout and logic (LP: #1066225)

  [ Dmitrijs Ledkovs ]
  * Automatic update of included source packages: partman-
    basicfilesystems 76ubuntu4, partman-efi 25ubuntu4, partman-
    partitioning 89ubuntu2, partman-target 81ubuntu1.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 06 Feb 2013 20:01:25 +0000

ubiquity (2.13.9) raring; urgency=low

  [ Luke Yelavich ]