@@ -2,6 +2,9 @@ ubiquity (2.13.12) UNRELEASED; urgency=low
 
   * While displaying question or error dialogs, only change the busy cursor
     state rather than also allowing changing step (LP: #1095684).
+  * Use an action group when marking packages for install or delete in the
+    apt cache; this is much faster when many packages are involved, since it
+    avoids repeating autoremoval calculations over and over again.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 18 Feb 2013 16:22:13 +0000
 
